k8s_template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdemo
spec:
  crd:
    spec:
      names:
        kind: K8sDemo
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
          properties:
            message:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: K8sNativeValidation
          source:
             validations:
             - expression: "object.metadata.name == 'good-production'"
               messageExpression: "metadata.name must be 'good-production'"
