k8s_template3.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8scompliant
spec:
  crd:
    spec:
      names:
        kind: K8sCompliant
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
          properties:
            message:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: K8sNativeValidation
          source:
           apiVersion: admissionregistration.k8s.io/v1alpha1
           kind: ValidatingAdmissionPolicy
           spec:
             paramKind:
               apiVersion: "foobar/v1"
               kind: "Placeholder"
             validations:
             - expression: "object.metadata != null"
               messageExpression: "missing required metadata, requires: object.metadata"
